# fund-programacao-c

./: CMakeLists.txt  README.md  main.c
Aula10 - Simulado N2/tests/: tests.c
Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/: aula05-exercicio1.c  aula5-exercicio1.c  aula5-exercicio2.c  comp_with_rand.c
Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/Lista/: exercicio1.c  exercicio2.c  exercicio3.c  exercicio6.c  exercicio7.c  exercicio8.c
Aula6 - Lista de Exercicios/Lista/: exercicio1.c  exercicio10.c  exercicio2.c  exercicio3.c  exercicio4.c  exercicio5.c  exercicio6.c  exercicio7.c  exercicio8.c  exercicio9.c
Aula7 - Estrutura de repetição/: main.c  while_example.c
Aula7 - Estrutura de repetição/Exercicios/: exercicio01.c  exercicio02.c  exercicio03.c
Aula7 - Estrutura de repetição/Lista/: lista_tabuada.c  taxa_crescimento_pais.c
Aula8 - Estrutura Homogenea/: main.c  matriz.c
Aula8 - Estrutura Homogenea/Exercicios/: exercicio01.c  exercicio02.c  exercicio04.c  exercicio05.c  exercicio06.c  exercicio07.c  exercicio08.c
Aula8- Estrutura Homogenea/Exercicios/: exercicio01.c  exercicio03.c  exercicio06.c  exercicio09.c  exercicio10.c
Aula9 - Estrutura Homogenea (Parte 02)/: main.c  x.c
Aula9 - Estrutura Homogenea (Parte 02)/Exercicios/: exercicio01.c  exercicio02.c
