cmake_minimum_required(VERSION 4.2)
project(fund-programacao-c C)

set(CMAKE_C_STANDARD 11)

add_executable(fund-programacao-c main.c
        "Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/comp_with_rand.c"
        "Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/Lista/exercicio2.c"
        "Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/Lista/exercicio1.c"
        "Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/Lista/exercicio6.c"
        "Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/Lista/exercicio7.c"
        "Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/Lista/exercicio8.c"
        "Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/Lista/exercicio9.c"
        "Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/Lista/exercicio10.c"
        "Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/Lista/exercicio3.c"
        "Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/aula05-exercicio1.c"
        "Aula5  - Estrutura condicional e Estrutura de seleção/Exercicios/aula5-exercicio2.c"
